force-app/main/default/objects/Expedition__c/Expedition__c.object-meta.xml
<CustomObject>
    <label>Expédition</label>
    <nameField>
        <displayFormat>EXP-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expéditions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>