force-app/main/default/objects/Expedition__c/fields/Arrivee_LAB__c.field-meta.xml
<CustomField>
    <fullName>Arrivee_LAB__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Arrivée LAB</label>
    <type>Checkbox</type>
</CustomField>