force-app/main/default/objects/Expedition__c/fields/Date_d_arriv_e__c.field-meta.xml
<CustomField>
    <fullName>Date_d_arriv_e__c</fullName>
    <label>Date d’arrivée</label>
    <type>DateTime</type>
</CustomField>