force-app/main/default/objects/Expedition__c/fields/Destinataire__c.field-meta.xml
<CustomField>
    <fullName>Destinataire__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destinataire</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Expéditions</relationshipLabel>
    <relationshipName>Exp_ditions</relationshipName>
    <type>Lookup</type>
</CustomField>