force-app/main/default/objects/Expedition__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NUMERIDENT&gt;LAB</fullName>
                <default>true</default>
                <label>NUMERIDENT&gt;LAB</label>
            </value>
            <value>
                <fullName>LAB&gt;NUMERIDENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>