force-app/main/default/objects/Expedition__c/fields/Email_transitaire__c.field-meta.xml
<CustomField>
    <fullName>Email_transitaire__c</fullName>
    <defaultValue>&quot;ops@linexcdg.fr&quot;</defaultValue>
    <label>Email transitaire</label>
    <type>Email</type>
</CustomField>