force-app/main/default/objects/Expedition__c/fields/Envoi_des_emails__c.field-meta.xml
<CustomField>
    <fullName>Envoi_des_emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envoi des emails</label>
    <type>Checkbox</type>
</CustomField>