force-app/main/default/objects/Expedition__c/fields/MAJ_commandes__c.field-meta.xml
<CustomField>
    <fullName>MAJ_commandes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indique si la shipping list a été traité</inlineHelpText>
    <label>MAJ commandes</label>
    <type>Checkbox</type>
</CustomField>