force-app/main/default/objects/Expedition__c/fields/Ne_pas_calculer__c.field-meta.xml
<CustomField>
    <fullName>Ne_pas_calculer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ne pas calculer</label>
    <type>Checkbox</type>
</CustomField>