force-app/main/default/objects/Expedition__c/fields/Nombre_de_colis__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_colis__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Nombre de colis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>