force-app/main/default/objects/Expedition__c/fields/Nombre_de_commandes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_commandes__c</fullName>
    <description>Nombre total de commandes contenus dans l&apos;expédition</description>
    <label>Nombre de commandes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>