force-app/main/default/objects/Expedition__c/fields/Orders_list__c.field-meta.xml
<CustomField>
    <fullName>Orders_list__c</fullName>
    <formula>HYPERLINK(&quot;https://numerident.lightning.force.com/apex/ShipmentOrderForm?id=&quot;+ Id , &quot;Orders&quot; , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Orders list</label>
    <type>Text</type>
</CustomField>