force-app/main/default/objects/Expedition__c/fields/Partage__c.field-meta.xml
<CustomField>
    <fullName>Partage__c</fullName>
    <label>Partage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>