force-app/main/default/objects/Expedition__c/fields/Poids__c.field-meta.xml
<CustomField>
    <fullName>Poids__c</fullName>
    <label>Poids</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>