force-app/main/default/objects/Expedition__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En transit</fullName>
                <default>true</default>
                <label>En transit</label>
            </value>
            <value>
                <fullName>BAE</fullName>
            </value>
            <value>
                <fullName>Arrivée partielle</fullName>
            </value>
            <value>
                <fullName>Arrivée</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>