force-app/main/default/objects/Expedition__c/fields/Vol__c.field-meta.xml
<CustomField>
    <fullName>Vol__c</fullName>
    <defaultValue>&quot;CX 260&quot;</defaultValue>
    <label>Vol</label>
    <length>255</length>
    <type>Text</type>
</CustomField>