force-app/main/default/objects/Expedition__c/recordTypes/Export.recordType-meta.xml
<RecordType>
    <fullName>Export</fullName>
    <active>true</active>
    <label>Export</label>
</RecordType>