force-app/main/default/objects/Expedition__c/recordTypes/Import.recordType-meta.xml
<RecordType>
    <fullName>Import</fullName>
    <active>true</active>
    <label>Import</label>
</RecordType>