force-app/main/default/objects/Expedition__c/validationRules/arrivee_des_imports.validationRule-meta.xml
<ValidationRule>
    <fullName>arrivee_des_imports</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordTypeId = &quot;0121v000000BWjn&quot;,  $User.ProfileId =&quot;00e0Y000000EwbZ&quot;, ISPICKVAL(Statut__c, &quot;Arrivée&quot;) )</errorConditionFormula>
    <errorMessage>You are not allowed to update the status of this parcel to &quot;Arrived&quot;.</errorMessage>
</ValidationRule>