force-app/main/default/objects/Expedition__c/validationRules/Nombre_de_commandes_dans_import.validationRule-meta.xml
<ValidationRule>
    <fullName>Nombre_de_commandes_dans_import</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordType.Id =&quot;0121v000000BWjn&quot;,  ISBLANK( Nombre_de_commandes__c ) )</errorConditionFormula>
    <errorDisplayField>Nombre_de_commandes__c</errorDisplayField>
    <errorMessage>You must fill the Total number of jobs</errorMessage>
</ValidationRule>