force-app/main/default/objects/Expedition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AWB__c</columns>
    <columns>Date__c</columns>
    <columns>Poids__c</columns>
    <columns>Orders_list__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>