force-app/main/default/objects/Expedition__c/listViews/En_transit_vers_l_usine.listView-meta.xml
<ListView>
    <fullName>En_transit_vers_l_usine</fullName>
    <columns>Date__c</columns>
    <columns>AWB__c</columns>
    <columns>NAME</columns>
    <columns>Destinataire__c</columns>
    <columns>Statut__c</columns>
    <columns>Direction__c</columns>
    <columns>Poids__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expedition__c.Export</value>
    </filters>
    <filters>
        <field>Statut__c</field>
        <operation>equals</operation>
        <value>En transit,BAE,Arrivée partielle</value>
    </filters>
    <label>Exports</label>
    <sharedTo>
        <role>HQ</role>
    </sharedTo>
</ListView>