force-app/main/default/objects/Expedition__c/listViews/Last_shipments.listView-meta.xml
<ListView>
    <fullName>Last_shipments</fullName>
    <columns>Date__c</columns>
    <columns>AWB__c</columns>
    <columns>Orders_list__c</columns>
    <columns>NAME</columns>
    <columns>Destinataire__c</columns>
    <columns>Statut__c</columns>
    <columns>Direction__c</columns>
    <columns>Date_d_arriv_e__c</columns>
    <columns>Nombre_de_colis__c</columns>
    <columns>Poids__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Expedition__c.Export</value>
    </filters>
    <label>Last shipments FROM Numerident</label>
</ListView>